docs: overhaul landing page, multi-SDK quick connect, and 37-tool MCP registry
Modernize index.md landing page with linked multi-SDK client switcher (Python, TypeScript, Java Client SDK, cURL, CLI), updated key performance metrics, cognitive architecture flowchart, and Material for MkDocs card grids. Update why-spector.md and about.md with 37+ MCP tools, Memory Kernel, and V4 bundles. Expand architecture/overview.md and mcp-integration.md to document the full 37-tool MCP registry across memory, graph context, namespace RBAC, and soul policy. Update sdk-usage/java-client.md to clearly distinguish between the lightweight Java Client SDK (spector-client) and embedded engine (spector-memory). Remove internal ADR citations from synapse and hebbian docs.

Refs #820

Co-authored-by: Bharat Joshi <bharatjoshi@spectrayan.com>